<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/rlogo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/idSignup"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/orange_button"
        android:maxWidth="320dp"
        android:minWidth="300dp"
        android:minHeight="60dp"
        android:text="@string/app_signupBtn"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/half_white_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/idSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlogo1"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_signupDesc"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/half_white_background2"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minWidth="320dp"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4101B2" />

        <EditText
            android:id="@+id/sEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/half_white_background2"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minWidth="320dp"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#5C00FF" />

        <EditText
            android:id="@+id/sPhone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/half_white_background2"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minWidth="320dp"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#5C00FF" />

        <EditText
            android:id="@+id/sPasswd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/half_white_background2"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#0027FF" />

        <TextView
            android:id="@+id/gotoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#352121"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>